Add página de login

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+  Aluno 1: Jennifer Gabriely
+  Aluno 2: Maysa
+  Aluno 3: Ana Clara
+  Aluno 4: Martie
+  Aluno 5: Victória
+-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -91,7 +99,7 @@
                                 <i class="fas fa-user me-2"></i>Olá, Visitante!
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#" data-page="login">Login</a></li>
+                                <li><a class="dropdown-item" href="login.html">Login</a></li>
                                 <li><a class="dropdown-item" href="#">Registrar</a></li>
                             </ul>
                         </div>
