--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<!-- Alunos envolvidos no projeto:
+    -Ana Clara;
+    -Jennifer Gabrielly;
+    -Martie;
+    -Maysa;
+    -Victoria Heloisa. -->
+    
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
